vlib/v/checker/tests/unsafe_c_calls_should_be_checked.vv
fn test_c() {
	mut p := C.malloc(4)
	s := 'hope'
	C.memcpy(p, s.str, 4)
}
